<resources>
    <string name="app_name">Orders Dice</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_player_edit">PlayerEditActivity</string>
    <string name="diceLabel">Dice:</string>
    <string name="playersLabel">Players:</string>
    <string name="blocked">BLOCKED!</string>
    <string name="remaining_dice">Remaining dice:</string>
    <string name="draw">Draw</string>
    <string name="next_round">Next Round</string>
    <string name="block">Block!</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="current_initial_dice_separator">/</string>
    <string name="dice">dice</string>
    <string name="remove_unit">Remove Unit</string>
    <string name="subverter_matrix">Subverter Matrix</string>
    <string name="vorpal_charge_for">"Vorpal Charge for %s"</string>
    <string name="remove_player">Remove Player</string>
    <string name="distort">DISTORT</string>
    <string name="vorpal_charge">Vorpal Charge</string>
    <string name="plasma_amplifier">Plasma Amplifier</string>
    <string name="add_player">Add Player</string>
    <string name="reset">Reset</string>
    <string name="add_distort_dice">Add Distort Dice</string>
</resources>
