<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.geeksong.ordersdice.PlayerEditActivity"
    tools:showIn="@layout/activity_player_edit">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:weightSum="1.0">

        <EditText
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="8"
            android:id="@+id/playerName" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_backspace_grey600_24dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:onClick="clearName" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diceLabel"
                android:id="@+id/diceCountLabel"
                android:layout_marginRight="3dp"
                android:layout_marginEnd="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/currentDiceCount"
                android:layout_marginRight="3dp"
                android:layout_marginEnd="3dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus_sign"
                android:id="@+id/increaseDiceCount" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus_sign"
                android:id="@+id/decreaseDiceCount" />
        </LinearLayout>
    </LinearLayout>

    <com.rarepebble.colorpicker.ColorPickerView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:colorpicker_defaultColor="#ffffff"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/colourPicker" />

</RelativeLayout>
